--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ mpl-token-metadata = "4.1.1"
 solana-client = "1.18.4"
 solana-sdk = "1.18.4"
 spl-token = "4.0.0"
+serde = "1.0.197"
+serde_json = "1.0.114"
+dotenv = "0.15.0"
