--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ mpl-token-metadata = "4.1.2"
 solana-client = "1.18.7"
 solana-sdk = "1.18.7"
 spl-token = "4.0.0"
+spl-token-2022 = "2.0.2"
 serde = "1.0.197"
 serde_json = "1.0.114"
 dotenv = "0.15.0"
