--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = [".", "api", "entity", "respository", "service", "utils"] }
+workspace = { members = [".", "api", "entity", "service", "utils"] }
 
 [package]
 name = "solana-checker-token-ingestor"
@@ -8,6 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+api = { path = "./api" }
 mpl-token-metadata = "4.1.2"
 solana-client = "1.18.7"
 solana-sdk = "1.18.7"
