--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.81"
+axum = "0.7.5"
+dotenvy = "0.15.7"
+tokio = { version = "1.36.0", features = ["full"] }
+tower = "0.4.13"
+tracing-subscriber = "0.3.18"
